add support for "integer"; more test cases